<resources>
    <string name="app_name">Recipes</string>
    <string name="error_message">An error has occurred</string>
    <string name="unknown">Unknown</string>
    <string name="no_results_message">0 results</string>
    <string name="servings">Servings:</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="previous_step">Previous step</string>
    <string name="next_step">Next step</string>
    <string name="action_recipes_all">All</string>
    <string name="appwidget_text">Recipes</string>
    <string name="add_widget">Add widget</string>
    <string name="action_recipes_favorite">Favorite</string>
    <string name="no_favorite_recipes">No favorite recipes</string>
    <string name="my_favorite_recipes">My favorite recipes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
