<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context=".StepDetailsActivity"
    >
    <ScrollView
        android:id="@+id/step_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Nutella Pie"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                />
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/pv_step_video"
                android:layout_width="0dp"
                android:layout_height="256dp"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_step_instruction"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/tv_step_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/pv_step_video"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed."
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_previous_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintTop_toBottomOf="@id/tv_step_instruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_next_step"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/previous_step"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/btn_previous_step"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_previous_step"
                app:layout_constraintBottom_toBottomOf="@id/btn_previous_step"
                android:text="@string/next_step"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/error_message"
        android:textSize="@dimen/subtitle_text"
        android:visibility="invisible" />
</FrameLayout>